# PumpAPI-Guide

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: bot.example.env  strategies.example.yaml
docs/: api-reference.md  architecture.md  getting-started.md  index.md  infrastructure.md  pumpapi-academic-research.tex  security.md
examples/: 01_basic_buy_sell.py  02_data_stream.py  03_lightning_trade.py  04_token_monitor.py  05_advanced_patterns.py
research/: README.md
src/pumpapi/: __init__.py  client.py  stream.py  types.py  utils.py
src/pumpapi_strategies/: __init__.py  base.py  executor.py  signal.py
strategies/: README.md
strategies/arbitrage/: cross_pool.py  triangle.py
strategies/copy_trading/: signal_executor.py  whale_tracker.py
strategies/mean_reversion/: curve_arb.py
strategies/momentum/: migration.py  volume_spike.py
tests/: conftest.py
tests/strategies/: test_signals.py
tests/unit/: test_types.py  test_utils.py
tutorials/: 01_setup.md  02_first_trade.md  03_real_time_streaming.md  04_build_bot.md  05_production.md
